# RType

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Jenkinsfile  LICENSE.md  Makefile  NOTICE.md  README.md  conanfile.txt  sonar-project.properties  subject.md
.github/workflows/: build_client.yml  build_server.yml  dependencies.yml  sync_to_target.yml
Gitbook/: README.md  SUMMARY.md
Gitbook/developer/: architecture.md  build-dependencies.md  ci-cd.md  client-internals.md  contribute.md  pull-requests.md  quality-tooling.md  server-internals.md
Gitbook/engine/: components.md  ecs-graph.md  overview.md  registry.md  runtime-integration.md  systems.md
Gitbook/get-started/: api.md  changelog.md  faq.md  overview.md  setup.md  troubleshooting.md  usage.md
Gitbook/protocol/: 00-overview.md  03-data-structures.md  developer-notes.md  examples.md  packet-reference.md  specification.md  tcp-messages.md  udp-04-state.md  udp-06-despawn.md  udp-10-lives-update.md  udp-12-disconnect.md  udp-13-return-to-menu.md  udp-connection.md  udp-entities.md  udp-gameplay.md  udp-players.md  udp-session.md  versioning-compatibility.md
Gitbook/technical-study/: security.md  storage.md
client/: CMakeLists.txt  README.md
client/include/client/ui/: App.hpp  Screens.hpp  Widgets.hpp
client/include/client/ui/widgets/: Button.hpp  InputBox.hpp  Title.hpp
client/src/: main.cpp
client/src/assets/: Assets.cpp
client/src/net/: Net.cpp  NetPackets.cpp
client/src/ui/: App.cpp  Screens.cpp  Widgets.cpp
client/src/ui/screens/: GameOver.cpp  Gameplay.cpp  Leaderboard.cpp  Menu.cpp  Multiplayer.cpp  NotEnoughPlayers.cpp  Options.cpp  Singleplayer.cpp  Utils.cpp  Waiting.cpp
client/src/ui/widgets/: Button.cpp  InputBox.cpp  Title.cpp
client/src/utils/: Utils.cpp
common/: CMakeLists.txt
common/include/common/: Protocol.hpp
docs/: api.md  architecture.md  changelog.md  faq.md  protocol.md  pull_request.md  setup.md  troubleshooting.md  usage.md
docs/devlopper/: README.md  client.md  ecs_graph.md  engine.md  protocol.md  server.md
docs/engine/: 00-overview.md  README.md
docs/engine/components/: AiController.md  Collided.md  Controller.md  Enemy.md  Player.md  Position.md  README.md  Size.md  Velocity.md
docs/engine/systems/: AiControlSystem.md  CollisionSystem.md  MovementSystem.md  PlayerControlSystem.md  README.md
docs/protocol/: 00-overview.md  01-header.md  02-transport.md  03-data-structures.md  README.md  tcp-100-welcome.md  tcp-101-start-game.md  udp-01-hello.md  udp-02-hello-ack.md  udp-03-input.md  udp-05-spawn.md  udp-07-ping.md  udp-08-pong.md  udp-09-roster.md  udp-11-score-update.md
docs/technical-study/: README.md  accessibility.md  algorithms-data-structures.md  security.md  storage.md
engine/: CMakeLists.txt
engine/include/rt/ecs/: Registry.hpp  Storage.hpp
engine/include/rt/game/: Components.hpp
engine/rt/ecs/: Registry.cpp  Storage.hpp  Types.hpp
engine/rt/game/: Components.hpp  Systems.hpp
engine/src/: Registry.cpp  Systems.cpp  game_compat_Systems.cpp
engine/src/components/: AiController.cpp  Collided.cpp  Controller.cpp  Enemy.cpp  Player.cpp  Position.cpp  Size.cpp  Velocity.cpp
engine/src/rt/components/: AiController.hpp  Collided.hpp  Controller.hpp  Enemy.hpp  Player.hpp  Position.hpp  Size.hpp  Velocity.hpp
engine/src/rt/ecs/: Registry.hpp  Storage.hpp  System.hpp  Types.hpp
engine/src/rt/game/: Components.hpp  Systems.hpp
engine/src/rt/systems/: AiControlSystem.hpp  CollisionSystem.hpp  MovementSystem.hpp  PlayerControlSystem.hpp
engine/src/systems/: AiControlSystem.cpp  CollisionSystem.cpp  MovementSystem.cpp  PlayerControlSystem.cpp
jenkins/: Jenkinsfile.analysis  Jenkinsfile.build  Jenkinsfile.build_client  Jenkinsfile.build_server  Jenkinsfile.dependencies  Jenkinsfile.full  Jenkinsfile.package  README.md  build-specific_binary.jenkinsfile  build_all_binarys.jenkinsfile  clone.jenkinsfile  deploy_doxygen_to_vm.jenkinsfile  generate_artifact.jenkinsfile  generate_documentation.jenkinsfile  install_dependencies.jenkinsfile  send_to_official_repo.jenkinsfile  verify_code.jenkinsfile
server/: CMakeLists.txt  README.md
server/include/: TcpServer.hpp  UdpServer.hpp
server/include/gameplay/: GameSession.hpp
server/include/instance/: MatchInstance.hpp
server/include/network/: AuthStore.hpp  NetworkManager.hpp
server/include/protocol/: TcpServer.hpp  UdpServer.hpp
server/src/: TcpServer.cpp  UdpServer.cpp  main.cpp
server/src/gameplay/: GameSession.cpp
server/src/instance/: MatchInstance.cpp
server/src/network/: NetworkManager.cpp
src/client/: CMakeLists.txt  main.cpp
src/client/include/client/ui/: App.hpp  Screens.hpp
src/client/src/ui/: App.cpp  Screens.cpp  Widgets.cpp
src/common/: CMakeLists.txt  Protocol.cpp  Protocol.hpp
src/common/include/common/: EventQueue.hpp  Events.hpp  Protocol.hpp
src/common/src/: Protocol.cpp
src/engine/: CMakeLists.txt
src/engine/include/rt/ecs/: Registry.hpp  Storage.hpp  System.hpp
src/engine/include/rt/game/: Components.hpp  Systems.hpp
src/engine/rt/ecs/: Registry.cpp  Registry.hpp  Storage.hpp  System.hpp  Types.hpp
src/engine/rt/game/: Components.hpp  Systems.hpp
src/engine/src/: Registry.cpp  Systems.cpp
src/server/: CMakeLists.txt  UdpServer.cpp  UdpServer.hpp  main.cpp
src/server/include/: UdpServer.hpp
src/server/include/server/: UdpServer.hpp
src/server/src/: UdpServer.cpp  main.cpp
